--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Francesco Abate - Computer engineer
 email: francesco1.abate@yahoo.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my website! Here you can find CTF writeups,
-  embedded projects, desktop and web applications and much more.
+  embedded projects, desktop and web applications, tutorials and much more.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://Francesco.Abate.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
