--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username:
 github_username:  frontinus
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
