--- a/_config.yml
+++ b/_config.yml
@@ -19,17 +19,31 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Francesco Abate - Computer engineer
+avatar: /assets/pics/pp.jpg
 email: francesco1.abate@yahoo.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my website! Here you can find CTF writeups,
   embedded projects, desktop and web applications, tutorials and much more.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://Francesco.Abate.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://francesco.abate.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  frontinus
-
+navigation:
+  - title: Home
+    url: /
+  - title: About
+    url: /about/
+  - title: CTFs
+    url: /ctfs/
+  - title: Rocketry
+    url: /rocketry/  
+  - title: Misc
+    url: /Misc/
+  - title: Contacts
+    url: /about/contacts/
+    
 # Build settings
-theme: jekyll-theme-hacker
+# theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
