--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ navigation:
   - title: About
     url: /about/
   - title: CTFs
-    url: /ctfs/
+    url: /CTFs/
   - title: Rocketry
-    url: /rocketry/  
+    url: /Rocketry/  
   - title: Misc
     url: /Misc/
   - title: Contacts
